GNOME Bugzilla – Bug 787393
Application crashes when removing Memo notes
Last modified: 2017-09-07 03:04:07 UTC
When trying to remove Memo notes, application crashes.
Created attachment 359321 [details] [review] memo-note: Add missing delete method Application was crashing when trying to remove Memo notes - those provided by Evolution. It was noticed that it was only implemented the archived method for Memo notes. This patches adds the missing delete method.
Review of attachment 359321 [details] [review]: Pushed to master.
*** Bug 744662 has been marked as a duplicate of this bug. ***