memo-note: Add missing delete method

Application was crashing when trying to remove Memo notes - those
provided by Evolution.

It was noticed that it was only implemented the archived method for Memo
notes.

This patches adds the missing delete method.

https://bugzilla.gnome.org/show_bug.cgi?id=787393